Refactor: Use functional composition and Optional for null safety
Co-authored-by: bren <bren@juanantonio.info>